--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI and Publish
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build share-checker image
         run: |
-          docker build -t share-checker:latest ./share-checker
+          docker build --pull -t share-checker:latest ./share-checker
 
       - name: Start share-checker container
         run: |
@@ -51,3 +51,28 @@ jobs:
         run: |
           docker rm -f share-checker || true
 
+  publish:
+    name: Push Docker image
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/share-checker:latest
+          docker build -t $IMAGE_NAME ./share-checker
+          docker push $IMAGE_NAME
